[package]
name = "x8"
version = "2.3.0"
authors = ["Alexander Mironov <sh1yo@tuta.io>"]
edition = "2018"
license = "GPL-3.0-or-later"
homepage = "https://github.com/Sh1Yo/x8"
repository = "https://github.com/Sh1Yo/x8"
description = "Hidden parameters discovery suite."
categories = ["command-line-utilities"]
keywords = ["security", "web", "recon", "content-discovery"]
readme = "README.md"

[dependencies]
tokio = { version = "1", features = ["full"] }
futures = "0.3.15"
reqwest = { version = "0.11", features = ["socks", "json", "cookies", "rustls-tls", "trust-dns"] }
regex = "1.3.7"
percent-encoding = "2.1.0"
lazy_static = "1.4.0"
clap = "2.33.1"
rand = "0.5.0"
colored = "2"
diffs = "0.2.1"
url = "2.1.1"
parking_lot = "0.11"
