[profile.release]
debug = true

[package]
name = "x8"
version = "4.2.2"
authors = ["Alexander Mironov <sh1yo@tuta.io>"]
edition = "2018"
license = "GPL-3.0-or-later"
homepage = "https://github.com/Sh1Yo/x8"
repository = "https://github.com/Sh1Yo/x8"
description = "Hidden parameters discovery suite."
categories = ["command-line-utilities"]
keywords = ["security", "web", "recon", "content-discovery"]
readme = "README.md"

[dependencies]
tokio = { version = "1", features = ["full"] }
futures = "0.3.15"
url = "2.3.1"
http = "0.2.9"
reqwest = { version = "0.11.14", features = ["socks", "cookies", "json", "rustls-tls", "trust-dns", "gzip"] }
regex = "1.3.7"
percent-encoding = "2.1.0"
lazy_static = "1.4.0"
clap = "2.33.1"
rand = "0.5.0"
itertools = "0.8.2"
env_logger = "0.7.1"
colored = "2"
diffs = "0.2.1"
parking_lot = "0.11"
log = "0.4.14"
atty = "0.2"
async-recursion = "1.0.0"
serde = "1.0"
serde_json = "1.0"
indicatif = "0.17.1"
linked-hash-map = "0.5.6"
strip-ansi-escapes = "0.1.1"
